error.log
> feedeliza-plus@1.0.0 start
> node backend/server.js
/app/backend/src/domains/technicalSpecifications/technicalSpecifications.service.js:48
                    model: models.RecipeIngredient,
                    ^^^^^
SyntaxError: Unexpected identifier 'model'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/app/backend/src/domains/technicalSpecifications/technicalSpecifications.controller.js:1:40)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
Node.js v20.19.5